dark mode setting icon fix

--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@ body {
 
 nav {
   box-shadow: none;
+  
 }
 
 a {
@@ -37,7 +38,7 @@ nav {
   position: fixed;
   top: 0px;
   left: 0px;
-  background-color: white;
+  background-color: white ;
   width: 100%;
   ;
   height: 55px;
@@ -1030,6 +1031,8 @@ nav {
   body.darkclass .tab-button {
     color: lightgray;
   }
+
+  body.darkclass .settings-icon > img {filter: invert(100), brightness(150);}
 
   .bottom-navigation.darkclass {
     background-color: black;
